cmake_minimum_required(VERSION 3.7)
project(wwhd_rando_server CXX)

if(DEFINED DEVKITPRO)
  include("${DEVKITPRO}/wut/share/wut.cmake" REQUIRED)
  add_definitions(-DDEVKITPRO)
else()
  find_package(Threads REQUIRED)
endif()

if(WIN32)
  # in windows case, we bundle a zlib static library
  set(ZLIB_LIBRARY "${CMAKE_SOURCE_DIR}/libs_win/zlib/zlibstat.lib")
  set(ZLIB_INCLUDE_DIR "libs_win/zlib")
  add_library(zlib STATIC IMPORTED)
  set_target_properties(zlib PROPERTIES IMPORTED_LOCATION ${ZLIB_LIBRARY})
  set(CMAKE_CXX_STANDARD 17)
else()
  include(FindPkgConfig)
  pkg_check_modules(ZLIB zlib REQUIRED)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
endif()

if(CMAKE_USE_PTHREADS_INIT)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror")
  set(THREADS_PREFER_PTHREAD_FLAG ON)
endif()

add_executable(wwhd_rando_server main.cpp ProtocolServer.cpp)
add_subdirectory("utility")
add_subdirectory("command")
add_subdirectory("filetypes")
# we don't build tests for console currently
if(NOT DEFINED DEVKITPRO)
  add_subdirectory("test")
endif()

if(WIN32)
  target_link_libraries(wwhd_rando_server zlib)
  target_include_directories(wwhd_rando_server PRIVATE ${ZLIB_INCLUDE_DIR})
else()
  target_link_libraries(wwhd_rando_server ${ZLIB_LDFLAGS})
  target_compile_options(wwhd_rando_server PRIVATE ${ZLIB_CFLAGS})
endif()
if(DEFINED DEVKITPRO)
  target_link_libraries(wwhd_rando_server iosuhax)
endif()
if(CMAKE_USE_PTHREADS_INIT)
  target_link_libraries(wwhd_rando_server Threads::Threads)
endif()

if(DEFINED DEVKITPRO)
  wut_create_rpx(wwhd_rando_server)
endif()